syntax = "proto3";

package hotelpb;

option go_package = "hotelpb/";

service HotelService {
  rpc GetRoomsByHotelId (GetRoomsRequest) returns (GetRoomsResponse);
  rpc GetOwnerIdByHotelId(GetOwnerIdRequest) returns (GetOwnerIdResponse);
}

message GetRoomsRequest {
  int32 hotel_id = 1;
}

message Room {
  int32 id = 1;
  int32 hotel_id = 2;
  string description = 3;
  int32 base_price = 4;
  int32 number = 5;
  int32 cost = 6;
  int32 room_type_id = 7;
}

message GetRoomsResponse {
  repeated Room rooms = 1;
}

message GetOwnerIdRequest {
  int32 id = 1;
}

message GetOwnerIdResponse {
  int32 owner_id = 1;
}